[package]
name = "lancedb"
version = "0.22.1-beta.1"
edition = "2021"
description = "LanceDB: A serverless, low-latency vector database for AI applications"
license = "Apache-2.0"
repository = "https://github.com/lancedb/lancedb"
keywords = ["vector", "database", "lance", "ai", "embeddings"]
categories = ["database"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zstd-sys = "=2.0.8+zstd.1.5.5"
arrow = { version = "55.1" }
arrow-array = { version = "55.1" }
arrow-data = { version = "55.1" }
arrow-schema = { version = "55.1" }
arrow-ord = { version = "55.1" }
arrow-cast = { version = "55.1" }
arrow-ipc = { version = "55.1" }
chrono = "=0.4.41"
datafusion-catalog = "49.0"
datafusion-common = { version = "49.0", default-features = false }
datafusion-execution = "49.0"
datafusion-expr = "49.0"
datafusion-physical-plan = "49.0"
object_store = "0.12.0"
snafu = "0.8"
half = { version = "2.6.0", default-features = false, features = ["num-traits"] }
lazy_static = "1"
lance = { version = "=0.35.0", default-features = false, features = ["dynamodb"], tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
lance-datafusion = { version = "=0.35.0", tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
lance-io = { version = "=0.35.0", default-features = false, tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
lance-index = { version = "=0.35.0", tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
lance-table = { version = "=0.35.0", tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
lance-linalg = { version = "=0.35.0", tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
lance-testing = { version = "=0.35.0", tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
lance-encoding = { version = "=0.35.0", tag = "v0.35.0-beta.4", git = "https://github.com/lancedb/lance.git" }
moka = { version = "0.12", features = ["future"] }
pin-project = "1.0.7"
tokio = { version = "1.23", features = ["rt-multi-thread"] }
log = "0.4"
async-trait = "0.1"
bytes = "1"
futures = "0.3.25"
itertools = "0.12"
http = { version = "1.2.1", optional = true }
prost = "0.13"
tracing = "0.1"
rand = { version = "0.8", optional = true }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = "0.10"
base64 = "0.22"
blake3 = "1.5"
num-traits = "0.2"
url = "2"

# Memory optimization dependencies (Task 1)
zstd = { version = "0.13", features = ["zstdmt"] }
lz4 = "1.24"
memmap2 = "0.9"
bloom = "0.3"
bincode = "1.3"
crc32fast = "1.4"
regex = "1.10"
# AWS SDK for Titan embeddings (replacing OpenAI from Codex)
aws-config = "1.1"
aws-sdk-bedrockruntime = { version = "1.27", optional = false }
anyhow = "1.0"
async-openai = { version = "0.20.0", optional = true }
serde_with = { version = "3.8.1" }
walkdir = "2"
# For remote feature
reqwest = { version = "0.12.0", default-features = false, features = [
    "charset",
    "gzip",
    "http2",
    "json",
    "macos-system-configuration",
    "stream",
] }
# rand moved to main dependencies section above
# http already defined above
uuid = { version = "1.7.0", features = ["v4", "v5"] }
polars-arrow = { version = ">=0.37,<0.40.0", optional = true }
polars = { version = ">=0.37,<0.40.0", optional = true }
hf-hub = { version = "0.4.1", optional = true, default-features = false, features = [
    "rustls-tls",
    "tokio",
    "ureq",
] }
candle-core = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
tokenizers = { version = "0.19.1", optional = true }
semver = "1.0.25"

# For a workaround, see workspace Cargo.toml
crunchy = "0.2.4"
bytemuck = "1.14"
bytemuck_derive = ">=1.8.1, <1.9.0"

# Tree-sitter for AST parsing
tree-sitter = "0.20"
tree-sitter-rust = "=0.20.0"  
tree-sitter-python = "=0.20.2"
tree-sitter-javascript = "=0.20.0"
tree-sitter-typescript = "=0.20.2"
tree-sitter-go = "=0.20.0"
tree-sitter-java = "=0.20.2"
tree-sitter-cpp = "=0.20.0"

# File watching
notify = "6.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# For CST/AST pipeline integration
dashmap = "6.1"

# Full-text search
tantivy = "0.21"

# For demo binaries
tempfile = "3.8"

[[bench]]
name = "current_benchmark"
harness = false

[dev-dependencies]
arrow = { version = "55", features = ["test_utils", "prettyprint"] }
criterion = "0.5"
fake = "2.9.2"
hyper = { version = "1", features = ["server"] }
itertools = "0.13"
lance-test-macros = { git = "https://github.com/lancedb/lance.git", tag = "v0.35.0-beta.4" }
datafusion-comet-spark-expr = "0.4"
proptest = "1.4.0"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
rand = "0.8.5"
serial_test = "3.0.0"
approx = "0.5"
anyhow = "1.0"
float-ord = "0.3"
rstest = "0.18.2"
aws-sdk-sts = "1.13"
tempfile = "3.8"
aws-sdk-kms = { version = "1.48.0" }
aws-config = "1.5.10"
aws-credential-types = "1.2.1"
aws-sdk-bedrockruntime = "1.58.0"
aws-smithy-runtime-api = "1.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.83"

# Memory optimization dependencies (duplicates removed)
datafusion = { version = "49.0", default-features = false }
http-body = "1"                                        # Matching reqwest


[features]
default = ["aws", "gcs", "azure", "dynamodb", "oss"]
aws = ["lance/aws", "lance-io/aws"]
oss = ["lance/oss", "lance-io/oss"]
gcs = ["lance/gcp", "lance-io/gcp"]
azure = ["lance/azure", "lance-io/azure"]
dynamodb = ["lance/dynamodb", "aws"]
remote = ["dep:http", "dep:rand"]
fp16kernels = ["lance-linalg/fp16kernels"]
s3-test = []
bedrock = []
openai = ["dep:async-openai"]
polars = ["dep:polars-arrow", "dep:polars"]
sentence-transformers = [
    "dep:hf-hub",
    "dep:candle-core",
    "dep:candle-transformers",
    "dep:candle-nn",
    "dep:tokenizers",
]

[[example]]
name = "openai"
required-features = ["openai"]

[[example]]
name = "sentence_transformers"
required-features = ["sentence-transformers"]

[[example]]
name = "bedrock"
required-features = ["bedrock"]

[[example]]
name = "simple"

[[example]]
name = "full_text_search"

[[example]]
name = "ivf_pq"

[[example]]
name = "hybrid_search"
required-features = ["sentence-transformers"]
