[package]
name = "test-tree-sitter-massive"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-lua = "0.2"
tree-sitter-bash = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.23"