[package]
name = "ipc-true-1to1-port"
version = "0.1.0"
edition = "2021"

[dependencies]
# Exact dependencies to match node-ipc behavior
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
libc = "0.2"
sha2 = "0.10"  # For crypto operations
base64 = "0.22"
lazy_static = "1.5"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

# Benchmarks will be added later
