[package]
name = "working-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
libc = "0.2"
bytes = "1.7"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

# Tests are in src/lib.rs
