[package]
name = "tree-sitter-massive-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.23.0"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.24.0"
tree-sitter-javascript = "0.24.0"
tree-sitter-typescript = "0.24.0"
tree-sitter-go = "0.24.0"
tree-sitter-java = "0.24.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.24.1"
tree-sitter-php = "0.24.0"
tree-sitter-lua = "0.2.0"
tree-sitter-bash = "0.24.1"
tree-sitter-css = "0.23.0"
tree-sitter-json = "0.24.8"
tree-sitter-swift = "0.7.1"
tree-sitter-scala = "0.24.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-html = "0.23.2"
sysinfo = "0.30"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
